Bug#20836 Selecting into variables results in wrong results being returned This error is displayed anytime the SELECT statement needs a temp table to return correct results because the object (select_dumpvar) that represents variables named in the INTO clause stored the results before the temp table was considered.  The problem was fixed by creating the necessary Item_func_set_user_var objects once the correct data is ready.