sql/sql_class.h
@@ -1573,8 +1573,7 @@ class select_dumpvar :public select_result_interceptor {
   ha_rows row_count;
 public:
   List<LEX_STRING> var_list;
-  List<Item_func_set_user_var> vars;
-  select_dumpvar(void)  { var_list.empty(); vars.empty(); row_count=0;}
+  select_dumpvar()  { var_list.empty(); row_count= 0;}
   ~select_dumpvar() {}
   int prepare(List<Item> &list, SELECT_LEX_UNIT *u);
   bool send_data(List<Item> &items);
